<resources>
    <string name="app_name">Roh Elhares</string>
    <string name="map_api_key">AIzaSyDa7vtwUx4fiAqhKntADNhywJyfbx118OI</string>
    <string name="go">Go Only</string>
    <string name="returns">Return Only</string>
    <string name="go_and_return">Go and Return</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="ok">Ok</string>
    <string name="detials">Detials</string>
    <string name="audio_recording">Audio recording</string>
    <string name="select_audio_file">ٍSelect Audio File</string>
    <string name="saved">Saved</string>
    <string name="the_number_of_impressions">The number of impressions</string>
    <string name="the_period_of_delay">The period of delay</string>
    <string name="second">"with second"</string>
    <string name="next">Next</string>
    <string name="show">show</string>
    <string name="hidden">Hidden</string>
    <string name="open">Open</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="timer_show">Timer Show</string>
    <string name="timer_hidden">Timer Hidden</string>

</resources>