<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewclose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/transparent"
                app:cardElevation="10dp"

                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_remove"

                    />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardgo"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    app:cardBackgroundColor="@color/second"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"


                        >

                        <ImageView
                            android:id="@+id/image1"
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:longClickable="false"
                            android:src="@drawable/ic_next"
                            android:tint="@color/white" />

                        <TextView
                            android:id="@+id/tv1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:clickable="false"
                            android:longClickable="false"
                            android:text="@string/go"
                            android:textColor="@color/white"
                            android:textSize="13sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardreturn"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"


                        >

                        <ImageView
                            android:id="@+id/image2"
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:longClickable="false"
                            android:padding="3dp"
                            android:rotation="180"
                            android:src="@drawable/ic_next"
                            android:tint="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/tv2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:clickable="false"
                            android:longClickable="false"
                            android:text="@string/select_audio_file"
                            android:textColor="@color/gray6"
                            android:textSize="13sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardgoreturn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"

                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"


                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/image3"
                            android:layout_width="45dp"
                            android:layout_height="20dp"
                            android:clickable="false"
                            android:longClickable="false"
                            android:padding="3dp"
                            android:rotation="180"
                            android:src="@drawable/ic_next"
                            android:tint="@color/colorPrimary" />

                        <ImageView
                            android:id="@+id/image4"
                            android:layout_width="45dp"
                            android:layout_height="20dp"
                            android:clickable="false"
                            android:longClickable="false"
                            android:padding="3dp"
                            android:src="@drawable/ic_next"
                            android:tint="@color/colorPrimary" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_gravity="center"
                        android:text="@string/select_audio_file"
                        android:textColor="@color/gray6"
                        android:textSize="13sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/small_rounded_btn_primary"
                android:text="@string/next"
                android:textColor="@color/mdtp_white"
                android:textSize="15sp"


                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</layout>
